--- a/frontend/main/index.html
+++ b/frontend/main/index.html
@@ -19,10 +19,10 @@
         <nav class="navbar">
             <div class="logo">GOLDBRAND</div>
             <ul class="nav-links">
-                <li><a href="#collections">Collections</a></li>
+                <li><a href="/frontend/collections/collections.html">Collections</a></li>
                 <li><a href="#about">Our Story</a></li>
-                <li><a href="#testimonials">Testimonials</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="../products/products.html">Buy Gold</a></li>
             </ul>
             <div class="nav-icons">
                 <a href="#search"><i class="fas fa-search"></i></a>
@@ -181,7 +181,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2023 GoldBrand. All Rights Reserved.</p>
+            <p>&copy; 2025 GoldBrand. All Rights Reserved.</p>
         </div>
     </footer>
 
