add many logics to main, collections, productDetails and products pages

--- a/frontend/collections/collections.html
+++ b/frontend/collections/collections.html
@@ -57,7 +57,7 @@
                     <h3>The Royal Heritage</h3>
                     <p>Our most prestigious collection featuring museum-quality craftsmanship and designs inspired by
                         royal treasures from across the world.</p>
-                    <a href="#" class="btn-featured">Discover Now</a>
+                    <a href="../products/products.html" class="btn-featured">Discover Now</a>
                 </div>
                 <div class="featured-image">
                     <img src="https://images.unsplash.com/photo-1611107683227-e9060eccd846?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1760&q=80"
