--- a/frontend/collections/collections.html
+++ b/frontend/collections/collections.html
@@ -12,86 +12,89 @@
 </head>
 
 <body>
-    <header>
-        <div class="container">
-            <div class="logo">
-                <a href="index.html">GOLD LUXE</a>
-            </div>
-            <nav>
-                <ul class="menu">
-                    <li><a href="/frontend/main/index.html">Home</a></li>
-                    <li><a href="#" class="active">Collections</a></li>
-                    <li><a href="../products/products.html">Products</a></li>
-                    <li><a href="/frontend/profile/index.html">Profile</a></li>
-                </ul>
-            </nav>
-            <div class="mobile-toggle">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-        </div>
-    </header>
-
-    <main>
-        <section class="hero">
+    <div id="page-transition">
+        <header>
             <div class="container">
-                <h1>Our Collections</h1>
-                <p class="subtitle">Discover our exquisite gold creations, each piece telling a unique story of
-                    craftsmanship and elegance</p>
-            </div>
-        </section>
-
-        <section class="collections">
-            <div class="container">
-                <div class="collection-grid">
-
+                <div class="logo">
+                    <a href="index.html">GOLD LUXE</a>
+                </div>
+                <nav>
+                    <ul class="menu">
+                        <li><a href="/frontend/main/index.html">Home</a></li>
+                        <li><a href="#" class="active">Collections</a></li>
+                        <li><a href="../products/products.html">Products</a></li>
+                        <li><a href="/frontend/profile/index.html">Profile</a></li>
+                    </ul>
+                </nav>
+                <div class="mobile-toggle">
+                    <span></span>
+                    <span></span>
+                    <span></span>
                 </div>
             </div>
-        </section>
+        </header>
 
-        <section class="featured-collection">
-            <div class="container">
-                <div class="featured-content">
-                    <h2>Featured Collection</h2>
-                    <h3>The Royal Heritage</h3>
-                    <p>Our most prestigious collection featuring museum-quality craftsmanship and designs inspired by
-                        royal treasures from across the world.</p>
-                    <a href="../products/products.html" class="btn-featured">Discover Now</a>
+        <main>
+            <section class="hero">
+                <div class="container">
+                    <h1>Our Collections</h1>
+                    <p class="subtitle">Discover our exquisite gold creations, each piece telling a unique story of
+                        craftsmanship and elegance</p>
                 </div>
-                <div class="featured-image">
-                    <img src="https://images.unsplash.com/photo-1611107683227-e9060eccd846?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1760&q=80"
-                        alt="Featured Collection">
-                </div>
-            </div>
-        </section>
-    </main>
+            </section>
 
-    <footer>
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-column">
-                    <h3>Gold Luxe</h3>
-                    <p>Crafting timeless elegance since 1995</p>
-                </div>
-                <div class="footer-column">
-                    <h3>Visit Us</h3>
-                    <p>123 Gold Street<br>Luxury Avenue<br>New York, NY 10001</p>
-                </div>
-                <div class="footer-column">
-                    <h3>Connect</h3>
-                    <div class="social-icons">
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-pinterest-p"></i></a>
+            <section class="collections">
+                <div class="container">
+                    <div class="collection-grid">
+
                     </div>
                 </div>
+            </section>
+
+            <section class="featured-collection">
+                <div class="container">
+                    <div class="featured-content">
+                        <h2>Featured Collection</h2>
+                        <h3>The Royal Heritage</h3>
+                        <p>Our most prestigious collection featuring museum-quality craftsmanship and designs inspired
+                            by
+                            royal treasures from across the world.</p>
+                        <a href="../products/products.html" class="btn-featured">Discover Now</a>
+                    </div>
+                    <div class="featured-image">
+                        <img src="https://images.unsplash.com/photo-1611107683227-e9060eccd846?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1760&q=80"
+                            alt="Featured Collection">
+                    </div>
+                </div>
+            </section>
+        </main>
+
+        <footer>
+            <div class="container">
+                <div class="footer-content">
+                    <div class="footer-column">
+                        <h3>Gold Luxe</h3>
+                        <p>Crafting timeless elegance since 1995</p>
+                    </div>
+                    <div class="footer-column">
+                        <h3>Visit Us</h3>
+                        <p>123 Gold Street<br>Luxury Avenue<br>New York, NY 10001</p>
+                    </div>
+                    <div class="footer-column">
+                        <h3>Connect</h3>
+                        <div class="social-icons">
+                            <a href="#"><i class="fab fa-instagram"></i></a>
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="copyright">
+                    <p>&copy; 2025 Gold Luxe. All rights reserved.</p>
+                </div>
             </div>
-            <div class="copyright">
-                <p>&copy; 2025 Gold Luxe. All rights reserved.</p>
-            </div>
-        </div>
-    </footer>
+        </footer>
+    </div>
     <script src="./collections.js" />
 </body>
 
