--- a/frontend/registration/index.html
+++ b/frontend/registration/index.html
@@ -15,107 +15,109 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="content-wrapper">
-            <div class="brand-section">
-                <div class="logo"><span>GOLD</span> BRAND</div>
-                <h1>Fine Jewelry Collection</h1>
-                <p>Experience luxury designed for the modern individual.</p>
-            </div>
-
-            <div class="form-container">
-                <div class="form-tabs">
-                    <button class="tab-btn active" data-form="login">Sign In</button>
-                    <button class="tab-btn" data-form="signup">Create Account</button>
+    <div id="page-transition">
+        <div class="container">
+            <div class="content-wrapper">
+                <div class="brand-section">
+                    <div class="logo"><span>GOLD</span> BRAND</div>
+                    <h1>Fine Jewelry Collection</h1>
+                    <p>Experience luxury designed for the modern individual.</p>
                 </div>
 
-                <div class="forms-wrapper">
-                    <form id="login-form" class="form active">
-                        <div class="form-group">
-                            <div class="input-group">
-                                <input type="email" id="login-email" required>
-                                <label for="login-email">Email Address</label>
-                                <div class="error-message"></div>
-                            </div>
-                        </div>
+                <div class="form-container">
+                    <div class="form-tabs">
+                        <button class="tab-btn active" data-form="login">Sign In</button>
+                        <button class="tab-btn" data-form="signup">Create Account</button>
+                    </div>
 
-                        <div class="form-group">
-                            <div class="input-group">
-                                <input type="password" id="login-password" required>
-                                <label for="login-password">Password</label>
-                                <div class="error-message"></div>
-                                <button type="button" class="toggle-password">
-                                    <i class="fa-regular fa-eye"></i>
-                                </button>
-                            </div>
-                        </div>
-
-                        <div class="form-options">
-                            <div class="remember-me">
-                                <input type="checkbox" id="remember">
-                                <label for="remember">Remember me</label>
-                            </div>
-                            <a href="#" class="forgot-password">Forgot password?</a>
-                        </div>
-
-                        <button type="submit" class="btn-submit">Sign In</button>
-                    </form>
-
-                    <form id="signup-form" class="form">
-                        <div class="form-row">
-                            <div class="form-group half">
+                    <div class="forms-wrapper">
+                        <form id="login-form" class="form active">
+                            <div class="form-group">
                                 <div class="input-group">
-                                    <input type="text" id="first-name" required>
-                                    <label for="first-name">First Name</label>
+                                    <input type="email" id="login-email" required>
+                                    <label for="login-email">Email Address</label>
                                     <div class="error-message"></div>
                                 </div>
                             </div>
 
-                            <div class="form-group half">
+                            <div class="form-group">
                                 <div class="input-group">
-                                    <input type="text" id="last-name" required>
-                                    <label for="last-name">Last Name</label>
+                                    <input type="password" id="login-password" required>
+                                    <label for="login-password">Password</label>
+                                    <div class="error-message"></div>
+                                    <button type="button" class="toggle-password">
+                                        <i class="fa-regular fa-eye"></i>
+                                    </button>
+                                </div>
+                            </div>
+
+                            <div class="form-options">
+                                <div class="remember-me">
+                                    <input type="checkbox" id="remember">
+                                    <label for="remember">Remember me</label>
+                                </div>
+                                <a href="#" class="forgot-password">Forgot password?</a>
+                            </div>
+
+                            <button type="submit" class="btn-submit">Sign In</button>
+                        </form>
+
+                        <form id="signup-form" class="form">
+                            <div class="form-row">
+                                <div class="form-group half">
+                                    <div class="input-group">
+                                        <input type="text" id="first-name" required>
+                                        <label for="first-name">First Name</label>
+                                        <div class="error-message"></div>
+                                    </div>
+                                </div>
+
+                                <div class="form-group half">
+                                    <div class="input-group">
+                                        <input type="text" id="last-name" required>
+                                        <label for="last-name">Last Name</label>
+                                        <div class="error-message"></div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <input type="email" id="signup-email" required>
+                                    <label for="signup-email">Email Address</label>
                                     <div class="error-message"></div>
                                 </div>
                             </div>
-                        </div>
 
-                        <div class="form-group">
-                            <div class="input-group">
-                                <input type="email" id="signup-email" required>
-                                <label for="signup-email">Email Address</label>
-                                <div class="error-message"></div>
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <input type="password" id="signup-password" required>
+                                    <label for="signup-password">Password</label>
+                                    <div class="error-message"></div>
+                                    <button type="button" class="toggle-password">
+                                        <i class="fa-regular fa-eye"></i>
+                                    </button>
+                                </div>
                             </div>
-                        </div>
 
-                        <div class="form-group">
-                            <div class="input-group">
-                                <input type="password" id="signup-password" required>
-                                <label for="signup-password">Password</label>
-                                <div class="error-message"></div>
-                                <button type="button" class="toggle-password">
-                                    <i class="fa-regular fa-eye"></i>
-                                </button>
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <input type="password" id="confirm-password" required>
+                                    <label for="confirm-password">Confirm Password</label>
+                                    <div class="error-message"></div>
+                                </div>
                             </div>
-                        </div>
 
-                        <div class="form-group">
-                            <div class="input-group">
-                                <input type="password" id="confirm-password" required>
-                                <label for="confirm-password">Confirm Password</label>
-                                <div class="error-message"></div>
+                            <div class="form-options">
+                                <div class="terms">
+                                    <input type="checkbox" id="terms" required>
+                                    <label for="terms">I agree to the <a href="#">Terms & Conditions</a></label>
+                                </div>
                             </div>
-                        </div>
 
-                        <div class="form-options">
-                            <div class="terms">
-                                <input type="checkbox" id="terms" required>
-                                <label for="terms">I agree to the <a href="#">Terms & Conditions</a></label>
-                            </div>
-                        </div>
-
-                        <button type="submit" class="btn-submit">Create Account</button>
-                    </form>
+                            <button type="submit" class="btn-submit">Create Account</button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
