--- a/frontend/profile/index.html
+++ b/frontend/profile/index.html
@@ -15,10 +15,21 @@
 <body>
     <div id="page-transition">
         <div class="container">
+            <nav class="navbar">
+                <div class="navbar-container">
+                    <div class="logo">GoldBrand</div>
+                    <ul class="nav-links">
+                        <li><a href="../main/index.html">Home</a></li>
+                        <li><a href="../products/products.html">Products</a></li>
+                        <li><a href="../collections/collections.html">Collections</a></li>
+                    </ul>
+                    <div class="mobile-toggle" id="mobile-toggle">&#9776;</div>
+                </div>
+            </nav>
             <div class="profile-wrapper">
                 <div class="profile-header">
                     <div class="profile-image">
-                        <img src="https://images.unsplash.com/photo-1618667074051-8da183ae7e32?q=80&w=3072&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                        <img src="https://plus.unsplash.com/premium_photo-1689551670902-19b441a6afde?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
                             alt="Profile Photo">
                         <div class="edit-photo">
                             <i class="fas fa-camera"></i>
