--- a/frontend/main/index.html
+++ b/frontend/main/index.html
@@ -25,10 +25,16 @@
                 <li><a href="../profile/index.html">Profile</a></li>
                 <li><a href="../products/products.html">Buy Gold</a></li>
             </ul>
-            <div class="nav-icons">
-                <a href="#search"><i class="fas fa-search"></i></a>
-                <a href="http://127.0.0.1:5500/frontend/profile/index.html"><i class="fas fa-user"></i></a>
-                <a href="#cart"><i class="fas fa-shopping-bag"></i></a>
+            <div class="right-icons">
+                <ul class="nav-link">
+                    <li><a href="../registration/index.html">Login</a></li>
+                    <li><a href="../registration/index.html">SignUp</a></li>
+                </ul>
+                <div>
+                    <a href="#search"><i class="fas fa-search"></i></a>
+                    <a href="http://127.0.0.1:5500/frontend/profile/index.html"><i class="fas fa-user"></i></a>
+                    <a href="#cart"><i class="fas fa-shopping-bag"></i></a>
+                </div>
             </div>
         </nav>
     </header>
