--- a/frontend/productDetail/product-detail.html
+++ b/frontend/productDetail/product-detail.html
@@ -16,7 +16,7 @@
         <header>
             <div class="container">
                 <div class="logo">
-                    <a href="index.html">GOLD LUXE</a>
+                    <a href="index.html">GoldBrand</a>
                 </div>
                 <nav>
                     <ul class="menu">
