--- a/frontend/products/products.html
+++ b/frontend/products/products.html
@@ -94,7 +94,7 @@
             <div class="container">
                 <div class="footer-content">
                     <div class="footer-column">
-                        <h3>Gold Luxe</h3>
+                        <h3>GoldBrand</h3>
                         <p>Crafting timeless elegance since 1995</p>
                     </div>
                     <div class="footer-column">
@@ -111,7 +111,7 @@
                     </div>
                 </div>
                 <div class="copyright">
-                    <p>&copy; 2025 Gold Luxe. All rights reserved.</p>
+                    <p>&copy; 2025 GoldBrand. All rights reserved.</p>
                 </div>
             </div>
         </footer>
