--- a/frontend/collections/collections.html
+++ b/frontend/collections/collections.html
@@ -16,7 +16,7 @@
         <header>
             <div class="container">
                 <div class="logo">
-                    <a href="index.html">GOLD LUXE</a>
+                    <a href="index.html">GOLDBRAND</a>
                 </div>
                 <nav>
                     <ul class="menu">
@@ -73,7 +73,7 @@
             <div class="container">
                 <div class="footer-content">
                     <div class="footer-column">
-                        <h3>Gold Luxe</h3>
+                        <h3>GoldBrand</h3>
                         <p>Crafting timeless elegance since 1995</p>
                     </div>
                     <div class="footer-column">
@@ -90,7 +90,7 @@
                     </div>
                 </div>
                 <div class="copyright">
-                    <p>&copy; 2025 Gold Luxe. All rights reserved.</p>
+                    <p>&copy; 2025 GoldBrand. All rights reserved.</p>
                 </div>
             </div>
         </footer>
