--- a/frontend/productDetail/product-detail.html
+++ b/frontend/productDetail/product-detail.html
@@ -245,7 +245,7 @@
             <div class="container">
                 <div class="footer-content">
                     <div class="footer-column">
-                        <h3>Gold Luxe</h3>
+                        <h3>GoldBrand</h3>
                         <p>Crafting timeless elegance since 1995</p>
                     </div>
                     <div class="footer-column">
@@ -262,7 +262,7 @@
                     </div>
                 </div>
                 <div class="copyright">
-                    <p>&copy; 2023 Gold Luxe. All rights reserved.</p>
+                    <p>&copy; 2023 GoldBrand. All rights reserved.</p>
                 </div>
             </div>
         </footer>
